[package]
name = "ws-pool"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generic WebSocket pool"
authors = ["Nerixyz"]
repository = "https://github.com/Nerixyz/ws-pool"
keywords = ["websocket"]

[dependencies]
fastwebsockets = { version = "0.10", features = ["upgrade"] }
http = "1"
http-body-util = "0.1"
hyper = "1.7"
hyper-util = "0.1.16"
rand = "0.9"
simd-json = "0.15"
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt", "time", "sync", "macros"] }
tokio-rustls = "0.26"
tracing = "0.1"
url = "2.5"
webpki-roots = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
